# open

./: .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/: renovate.json  template.yml
.github/rhiza/: template.yml
.github/workflows/: marimo.yml  pre-commit.yml  release.yml
.rhiza/: history  template.yml
book/marimo/: openbb-demo.py
book/marimo/notebooks/: openbb-demo.py
notebooks/: minimal enclosing circle.py  openbb-demo.py
