[project]
name = "open"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = [
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "openbb-core>=1.5.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]
