[project]
name = "open"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "openbb-core>=1.5.7",
    "openbb-equity>=1.5.1",
    "openbb-yfinance>=1.5.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]

[tool.deptry.package_module_name_map]
openbb-core = "openbb"
