[project]
name = "open"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = []

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "openbb-core>=1.5.7",
    "openbb-equity>=1.5.1",
    "openbb-yfinance>=1.5.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]

[tool.deptry.package_module_name_map]
marimo = "marimo"
numpy = "numpy"
openbb-core = "openbb"
openbb-equity = "openbb_equity"
openbb-yfinance = "openbb_yfinance"
pandas = "pandas"
plotly = "plotly"
